[package]
name = "sat_solver"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
global_counter = "0.2.2"
tailcall = "1.0.1"
log = "0.4.21" 
env_logger = "0.11.3"
